--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dev_dependencies:
   cached_network_image: ^3.0.0
   flutter_card_swipper: ^0.4.0
 
+  # 网格数据
+  flutter_staggered_grid_view: ^0.4.1
+
 
 
 # For information on the generic Dart part of this file, see the
