--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dev_dependencies:
 
   # 网格数据
   flutter_staggered_grid_view: ^0.4.1
+  #字母列表
+  azlistview: ^2.0.0-nullsafety.0
+  #汉字转拼音
+  lpinyin: ^2.0.3
 
 
 
